--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -229,6 +229,7 @@ fr-FR:
     back: "Retour"
     show: "Détail"
     confirm: "Êtes vous sûr ?"
+    filter: "Filtrer"
 
     # Project
     list_projects: "Liste des projets"
