Adds cost + summary.

--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -293,3 +293,4 @@ fr-FR:
     settings: "Paramètres"
     provisional_schedule: "Planning prévisionnel"
     planning: "Planning"
+    cost: 'Coût'
